fix: colors for scrollbar

--- a/src/shared/styles/theme/_color/colors.scss
+++ b/src/shared/styles/theme/_color/colors.scss
@@ -40,3 +40,8 @@ $color-control-bg-border-default-hover: rgba($color-base-phantom, 0.52);
 
 // Error
 $color-typo-alert: $color-base-alert;
+
+// SCROLLBAR
+$color-scroll-bg: $color-light-medium;
+$color-scroll-thumb: $color-red-medium;
+$color-scroll-thumb-hover: $color-red-dark;
